검사 품목 서비스 로직구현 중